# gitlab-dbt-analytics

./: .gitignore  .gitlab-ci.yml  .triage-policies.yml  CODEOWNERS  Makefile  Pipfile  README.md  docker-compose.yml  fct_events_all.sql  file.txt  pyproject.toml  setup.py
.gitlab/: README.md
.gitlab/issue_templates/: CSV or GSheets Data Upload.md  Cleanup Old Tech.md  Code Cleanup.md  Credential Cycling.md  DE Milestone Planning.md  DE Triage Errors.md  Dashboard Review.md  Data Collaboration.md  Data Download Request.md  Data Export Request.md  Data Offboarding.md  Data Onboarding AE.md  Data Onboarding.md  Data Quality Problem.md  Data Science Project Process.md  Data Team Milestone Planning.md  Data Triage.md  Driveload Instructions.md  EDM Table Migration.md  Full DBT Refresh.md  Full Data Refresh from Source.md  Full Data Refresh.md  Full Source Refresh.md  Fusion Team Milestone Planning.md  Intern Guide.md  (+21 more)
admin/: README.md  make_life_easier.zsh  onboarding_script.zsh  sample_profiles.yml
analyze/: README.md
dags/: README.md  airflow_utils.py  kube_secrets.py  kubernetes_helpers.py
extract/: README.md  check_pipeline.py  check_pipeline2.py  check_pipelines_new.py  extract-ci.yml  some_bad_file.py
load/: README.md
orchestration/: README.md  ci_helpers.py  drop_snowflake_objects.py  manage_snowflake.py  qualtrics_client.py  reduce_file_size.py  snowflake_password_change.py  upload_dbt_file_to_snowflake.py
permissions/: README.md
pump/: README.md  pumps.py  pumps.yml
transform/: README.md  generate_dbt_schema.py  periscope_check.py  sisense_check.py
(+3937 files in other folders)
