[tool.poetry]
name = "analytics-ci"
version = "1.0.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.8.0"
astroid = "2.11.3"
asttokens = "2.0.5"
attrs = "21.4.0"
backcall = "0.2.0"
black = "22.3.0"
certifi = "2021.10.8"
charset-normalizer = "2.0.12"
click = "8.1.2"
colorama = "0.4.4"
decorator = "5.1.1"
dill = "0.3.4"
executing = "0.8.3"
flake8 = "4.0.1"
future = "0.18.2"
gitlabdata = "0.3.13"
idna = "3.3"
importlib-metadata = "4.2.0"
iniconfig = "1.1.1"
ipython = "8.2.0"
isort = "5.10.1"
jedi = "0.18.1"
lazy-object-proxy = "1.7.1"
mando = "0.6.4"
matplotlib-inline = "0.1.3"
mccabe = "0.6.1"
mypy = "0.942"
mypy-extensions = "0.4.3"
packaging = "21.3"
parso = "0.8.3"
pathspec = "0.9.0"
pexpect = "4.8.0"
pickleshare = "0.7.5"
platformdirs = "2.5.2"
pluggy = "1.0.0"
prompt-toolkit = "3.0.29"
ptyprocess = "0.7.0"
pure-eval = "0.2.2"
py = "1.11.0"
pycodestyle = "2.8.0"
pyflakes = "2.4.0"
Pygments = "2.11.2"
pylint = "2.13.7"
pyparsing = "3.0.8"
pytest = "7.1.1"
radon = "5.1.0"
requests = "2.27.1"
six = "1.16.0"
stack-data = "0.2.0"
tokenize-rt = "4.2.1"
toml = "0.10.2"
tomli = "2.0.1"
traitlets = "5.1.1"
typed-ast = "1.5.3"
types-python-dateutil = "2.8.12"
types-PyYAML = "6.0.7"
types-requests = "2.27.20"
types-urllib3 = "1.26.13"
typing_extensions = "4.2.0"
urllib3 = "1.26.9"
vulture = "2.3"
wcwidth = "0.2.5"
wrapt = "1.14.0"
xenon = "0.9.0"
zipp = "3.8.0"

